--- a/index.html
+++ b/index.html
@@ -79,9 +79,17 @@
 
             var placement_coordinates = [];
             for (var i = 0; i <= membrane_path_positions.length; i++) {
-                var new_svg_point = membrane_path.getPointAtLength(membrane_path_positions[i]);
-                var x_y_coordinates = [new_svg_point.x,new_svg_point.y];
-                placement_coordinates.push(x_y_coordinates)
+                var primary_position = membrane_path_positions[i];
+                var secondary_position = primary_position + 1;
+
+                var primary_svg_point = membrane_path.getPointAtLength(primary_position);
+                var secondary_svg_point = membrane_path.getPointAtLength(secondary_position);
+
+                // Cross platform compatible path point angle calculation.
+                var orientation = Math.atan2(primary_svg_point.y - secondary_svg_point.y, primary_svg_point.x - secondary_svg_point.x) * (180 / Math.PI);
+
+                var coordinates = [primary_svg_point.x,primary_svg_point.y, orientation];
+                placement_coordinates.push(coordinates)
             }
 
             console.log(placement_coordinates);
@@ -93,6 +101,7 @@
 
                 var width = 100;
                 var height = 100;
+                var angle = element_placement_position[2];
 
                 var final_position = [(element_placement_position[0] - (width/2)), (element_placement_position[1] - (height/2)) ];
 
@@ -100,7 +109,7 @@
                                       .attr("xlink:href", integral_component_url)
                                       .attr("width", width)
                                       .attr("height", height)
-                                      .attr("transform", "translate(" + final_position + ")");
+                                      .attr("transform", "translate(" + final_position + ")rotate(" + angle + ")");
             }
         }
 
