--- a/index.html
+++ b/index.html
@@ -63,14 +63,14 @@
             console.log(properties_to_draw);
 
             var membrane_path = cell_membrane.node();
-            var memebrane_length = membrane_path.getTotalLength();
+            var membrane_length = membrane_path.getTotalLength();
 
-            var slice_length = memebrane_length/(properties_to_draw.length);
+            var slice_length = membrane_length/(properties_to_draw.length);
 
             var membrane_path_positions = [];
             var current_position = 0;
 
-            while (current_position < memebrane_length){
+            while (current_position < membrane_length){
                 membrane_path_positions.push(current_position);
                 current_position += slice_length
             }
@@ -78,9 +78,13 @@
             console.log(membrane_path_positions);
 
             var placement_coordinates = [];
-            for (var i = 0; i <= membrane_path_positions.length; i++) {
-                var primary_position = membrane_path_positions[i];
+            for (var index_two in membrane_path_positions) {
+                var primary_position = membrane_path_positions[index_two];
                 var secondary_position = primary_position + 1;
+
+                if (secondary_position >= membrane_length){
+                    secondary_position = primary_position - 1;
+                }
 
                 var primary_svg_point = membrane_path.getPointAtLength(primary_position);
                 var secondary_svg_point = membrane_path.getPointAtLength(secondary_position);
@@ -105,14 +109,17 @@
                 var width = 100;
                 var height = 100;
                 var angle = element_placement_position[2];
+                var width_offset = (width/2);
+                var height_offset = (height/2);
 
-                var final_position = [(element_placement_position[0] - (width/2)), (element_placement_position[1] - (height/2)) ];
+                var final_position = [(element_placement_position[0] - width_offset), (element_placement_position[1] - height_offset) ];
+                var rotation_position = [angle, width_offset, height_offset];
 
                 var img = diagram_root.append("svg:image")
                                       .attr("xlink:href", integral_component_url)
                                       .attr("width", width)
                                       .attr("height", height)
-                                      .attr("transform", "translate(" + final_position + ")rotate(" + angle + ")");
+                                      .attr("transform", "translate(" + final_position + ")rotate(" + rotation_position + ")");
             }
         }
 
