--- a/index.html
+++ b/index.html
@@ -6,171 +6,27 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>G2CView</title>
 
-    <!-- Import Externals-->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha256-916EbMg70RQy9LHiGkXzG8hSg9EdNy97GazNG/aiY1w=" crossorigin="anonymous"/>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha256-U5ZEeKfGNOja007MMD3YBI0A3OSZOQbeG6z2f2Y0hu8=" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/4.11.0/d3.min.js" integrity="sha256-aYYnqVVhAJ4lDammP4Qybmxg3/HVpA7/sNSCntyCyu4=" crossorigin="anonymous"></script>
+    <!-- Style Sheets -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.min.css"
+          integrity="sha256-916EbMg70RQy9LHiGkXzG8hSg9EdNy97GazNG/aiY1w=" crossorigin="anonymous"/>
+    <link href="css/custom.css" rel="stylesheet"/>
 
-    <style>
-        .cell-diagram {
-            height: 75vh;
-        }
-    </style>
-
-    <script async>
-        function create_genome_property_name_list(root_genome_property)
-        {
-            var genome_properties_names = [];
-            var children = root_genome_property.children;
-
-            for (var index in children){
-                var child = children[index];
-
-                genome_properties_names.push(child.name);
-
-                if (child.children!==null) {
-                    var grand_child_names = create_genome_property_name_list(child);
-                    genome_properties_names = genome_properties_names.concat(grand_child_names)
-                }
-            }
-
-            return genome_properties_names
-        }
-
-        function render_cell(root_genome_property, diagram_root)
-        {
-            var circle_data = [
-                [250,125],
-                [750,125],
-                [750,375],
-                [250,375]
-
-            ];
-
-            var cell_membrane = diagram_root.append("path")
-                                            .data([circle_data])
-                                            .attr("d", d3.line().curve(d3.curveCardinalClosed))
-                                            .attr("stroke", "grey")
-                                            .attr("stroke-width", 2)
-                                            .attr("fill", "none");
-
-            var properties_to_draw = select_properties_to_draw(root_genome_property);
-            console.log(properties_to_draw);
-
-            var membrane_path = cell_membrane.node();
-            var membrane_length = membrane_path.getTotalLength();
-
-            var slice_length = membrane_length/(properties_to_draw.length);
-
-            var membrane_path_positions = [];
-            var current_position = 0;
-
-            while (current_position < membrane_length){
-                membrane_path_positions.push(current_position);
-                current_position += slice_length
-            }
-
-            console.log(membrane_path_positions);
-
-            var placement_coordinates = [];
-            for (var index_two in membrane_path_positions) {
-                var primary_position = membrane_path_positions[index_two];
-                var secondary_position = primary_position + 1;
-
-                if (secondary_position >= membrane_length){
-                    secondary_position = primary_position - 1;
-                }
-
-                var primary_svg_point = membrane_path.getPointAtLength(primary_position);
-                var secondary_svg_point = membrane_path.getPointAtLength(secondary_position);
-
-                // Cross platform compatible path point angle calculation.
-                var rotation = Math.round(Math.atan2(primary_svg_point.y - secondary_svg_point.y, primary_svg_point.x - secondary_svg_point.x) * (180 / Math.PI));
-                var x_coordinate = Math.round(primary_svg_point.x);
-                var y_coordinate = Math.round(primary_svg_point.y);
-
-
-                var coordinates = [x_coordinate, y_coordinate, rotation];
-                placement_coordinates.push(coordinates)
-            }
-
-            console.log(placement_coordinates);
-
-            for (var index in placement_coordinates){
-                var element_placement_position = placement_coordinates[index];
-
-                var integral_component_url = "data/singe_transporter.svg";
-
-                var width = 100;
-                var height = 100;
-                var angle = element_placement_position[2];
-                var width_offset = (width/2);
-                var height_offset = (height/2);
-
-                var final_position = [(element_placement_position[0] - width_offset), (element_placement_position[1] - height_offset) ];
-                var rotation_position = [angle, width_offset, height_offset];
-
-                var img = diagram_root.append("svg:image")
-                                      .attr("xlink:href", integral_component_url)
-                                      .attr("width", width)
-                                      .attr("height", height)
-                                      .attr("transform", "translate(" + final_position + ")rotate(" + rotation_position + ")");
-            }
-        }
-
-        function select_properties_to_draw(root_genome_property)
-        {
-            var genome_properties_to_draw = [];
-            var children = root_genome_property.children;
-
-            for (var index in children){
-                var child = children[index];
-
-                if (child.artwork === true) {
-                    genome_properties_to_draw.push(child);
-                }
-
-                if (child.children!==null) {
-                    var grand_child_names = select_properties_to_draw(child);
-                    genome_properties_to_draw = genome_properties_to_draw.concat(grand_child_names)
-                }
-            }
-
-            return genome_properties_to_draw
-        }
-
-
-        $.getJSON('data/test_organism_gen_props.json', function (genome_properties_tree) {
-            console.log(genome_properties_tree);
-            var root_genome_property = genome_properties_tree.root;
-
-            var genome_properties_names = create_genome_property_name_list(root_genome_property);
-            console.log(genome_properties_names);
-
-            var gen_prop_dropdown_div = $('#genprop_drop');
-
-            for (var index in genome_properties_names){
-                var name = genome_properties_names[index];
-
-                gen_prop_dropdown_div.append('<p>' + name + '</p>')
-            }
-
-            var cell_diagram_root = d3.select("#cell-diagram").append("svg")
-                                      .attr("width", 1000)
-                                      .attr("height", 500);
-
-            render_cell(root_genome_property, cell_diagram_root)
-        })
-
-    </script>
+    <!-- Javascripts -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"
+            integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/js/bootstrap.min.js"
+            integrity="sha256-U5ZEeKfGNOja007MMD3YBI0A3OSZOQbeG6z2f2Y0hu8=" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/4.11.0/d3.min.js"
+            integrity="sha256-aYYnqVVhAJ4lDammP4Qybmxg3/HVpA7/sNSCntyCyu4=" crossorigin="anonymous"></script>
+    <script async src="js/index.js"></script>
 </head>
 <body>
     <nav class="navbar navbar-default">
         <div class="container-fluid">
             <!-- Brand and toggle get grouped for better mobile display -->
             <div class="navbar-header">
-                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse"
+                        data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
                     <span class="sr-only">Toggle navigation</span>
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
@@ -191,9 +47,7 @@
     <section class="container-fluid">
         <div class="row">
             <div class="col-md-9">
-                <div class="panel panel-default cell-diagram">
-                    <div class="panel-body" id="cell-diagram">
-                    </div>
+                <div class="panel panel-default cell-diagram" id="cell-diagram">
                 </div>
                 <div class="panel panel-default">
                     <div class="panel-body">
