--- a/index.html
+++ b/index.html
@@ -202,6 +202,8 @@
                               }
 
                               return number_of_childs;
+                          })
+                          .sort(null);
 
         let nodes = partition.nodes(genome_properties_tree.tree_no_leaves);
 
